--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,13 @@ name = "pypi"
 pylint = "*"
 flask = "*"
 gunicorn = "*"
+flask-wtf = "*"
+wtforms = "*"
+flask-sqlalchemy = "*"
+flask-login = "*"
+email-validator = "*"
+pillow = "*"
+flask-bcrypt = "*"
 
 [dev-packages]
 
