--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,33 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pylint = "*"
-flask = "*"
-gunicorn = "*"
-flask-wtf = "*"
-wtforms = "*"
-flask-sqlalchemy = "*"
-flask-login = "*"
+pylint = "==2.8.2"
+gunicorn = "==20.1.0"
 email-validator = "*"
-pillow = "*"
-flask-bcrypt = "*"
+python-decouple = "*"
+svgwrite = "*"
+pytest = "*"
+pytest-flask = "*"
+astroid = "==2.5.6"
+click = "==8.0.1"
+isort = "==5.8.0"
+itsdangerous = "==2.0.1"
+lazy-object-proxy = "==1.6.0"
+mccabe = "==0.6.1"
+toml = "==0.10.2"
+wrapt = "==1.12.1"
+Flask = "==2.0.1"
+Flask-WTF = "*"
+WTForms = "*"
+Flask-SQLAlchemy = "*"
+Flask-Login = "*"
+Pillow = "*"
+Flask-Bcrypt = "*"
+Flask-Mail = "*"
+PyJWT = "*"
+Jinja2 = "==3.0.1"
+MarkupSafe = "==2.0.1"
+Werkzeug = "==2.0.1"
 
 [dev-packages]
 
