--- a/Pipfile
+++ b/Pipfile
@@ -6,11 +6,11 @@ name = "pypi"
 [packages]
 pylint = "==2.8.2"
 gunicorn = "==20.1.0"
-email-validator = "*"
-python-decouple = "*"
-svgwrite = "*"
-pytest = "*"
-pytest-flask = "*"
+email-validator = "==1.1.2"
+python-decouple = "==3.4"
+svgwrite = "==1.4.1"
+pytest = "==6.2.4"
+pytest-flask = "==1.2.0"
 astroid = "==2.5.6"
 click = "==8.0.1"
 isort = "==5.8.0"
@@ -20,17 +20,32 @@ mccabe = "==0.6.1"
 toml = "==0.10.2"
 wrapt = "==1.12.1"
 Flask = "==2.0.1"
-Flask-WTF = "*"
-WTForms = "*"
-Flask-SQLAlchemy = "*"
-Flask-Login = "*"
-Pillow = "*"
-Flask-Bcrypt = "*"
-Flask-Mail = "*"
-PyJWT = "*"
+Flask-WTF = "==0.15.1"
+WTForms = "==2.3.3"
+Flask-SQLAlchemy = "==2.5.1"
+Flask-Login = "==0.5.0"
+Pillow = "==8.2.0"
+Flask-Bcrypt = "==0.7.1"
+Flask-Mail = "==0.9.1"
+PyJWT = "==2.1.0"
 Jinja2 = "==3.0.1"
 MarkupSafe = "==2.0.1"
 Werkzeug = "==2.0.1"
+coverage = "*"
+attrs = "==21.2.0"
+bcrypt = "==3.2.0"
+blinker = "==1.4"
+cffi = "==1.14.5"
+dnspython = "==2.1.0"
+greenlet = "==1.1.0"
+iniconfig = "==1.1.1"
+pluggy = "==0.13.1"
+py = "==1.10.0"
+pycparser = "==2.20"
+pyparsing = "==2.4.7"
+six = "==1.16.0"
+SQLAlchemy = "==1.4.17"
+coveralls = "*"
 
 [dev-packages]
 
