--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,17 @@
 
 -i https://pypi.org/simple
 astroid==2.5.6
-attrs==21.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-bcrypt==3.2.0; python_version >= '3.6'
+attrs==21.2.0
+bcrypt==3.2.0
 blinker==1.4
+certifi==2021.5.30
 cffi==1.14.5
+chardet==4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 click==8.0.1
-dnspython==2.1.0; python_version >= '3.6'
+coverage==5.5
+coveralls==3.1.0
+dnspython==2.1.0
+docopt==0.6.2
 email-validator==1.1.2
 flask-bcrypt==0.7.1
 flask-login==0.5.0
@@ -20,9 +25,9 @@ flask-mail==0.9.1
 flask-sqlalchemy==2.5.1
 flask-wtf==0.15.1
 flask==2.0.1
-greenlet==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+greenlet==1.1.0
 gunicorn==20.1.0
-idna==3.2; python_version >= '3.5'
+idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 iniconfig==1.1.1
 isort==5.8.0
 itsdangerous==2.0.1
@@ -32,19 +37,22 @@ markupsafe==2.0.1
 mccabe==0.6.1
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pillow==8.2.0
-pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-py==1.10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pluggy==0.13.1
+py==1.10.0
+pycparser==2.20
 pyjwt==2.1.0
 pylint==2.8.2
-pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyparsing==2.4.7
 pytest-flask==1.2.0
 pytest==6.2.4
 python-decouple==3.4
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.17; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+requests==2.25.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+six==1.16.0
+sqlalchemy==1.4.17
 svgwrite==1.4.1
 toml==0.10.2
+urllib3==1.26.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4.0'
 werkzeug==2.0.1
 wrapt==1.12.1
 wtforms==2.3.3
+
