--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ pycparser==2.20
 pyjwt==2.1.0
 pylint==2.8.2
 pyparsing==2.4.7
+pytest-cov==2.12.1
 pytest-flask==1.2.0
 pytest==6.2.4
 python-decouple==3.4
@@ -51,8 +52,9 @@ six==1.16.0
 sqlalchemy==1.4.17
 svgwrite==1.4.1
 toml==0.10.2
-urllib3==1.26.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4.0'
+urllib3==1.26.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 werkzeug==2.0.1
 wrapt==1.12.1
 wtforms==2.3.3
+
 
